--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <div><h1>number 1</h1> <br> <p>This website has been made for grub drops</p></div>
   <div><h1>number 2</h1> <br> <p> <a href="https://docs.google.com/presentation/d/e/2PACX-1vRzZoNoMDwq340x6XvRoZqSOLxQ2tJk3w-t1_hH9CI4XRNzF-34hydf4bZ1lEFX9gKyxp1ANrnfSxDR/pub?start=false&loop=false&delayms=3000&slide=id.g3547bf874fd_0_9" target="_blank"> link to grub tailwind CSS guide </a></p></div> 
     </div>
-    <div class="bg-cyan-100">
-      <h1 class="text-center text-4xl"></h1>
+    <div class="bg-cyan-300 px-5">
+      <h1 class="text-center text-4xl">FAQ</h1>
+      <p class="font-bold">Why do you want to get grub?</p>
+      <p>Reason, I am hungery and it has been fun to make code spaces with friends :D </p>
     </div>
   </body>
 </html>
